fixed double scrollbar bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
-  user-select: none;
+  /* user-select: none; */
   /* overflow: hidden; */
   /* font-family: var(--font-open-san); */
 }
@@ -18,6 +18,8 @@ body,
 #root {
   overflow: auto;
 }
+
+
 
 a{
   color: whitesmoke;
@@ -50,7 +52,7 @@ body {
   background: linear-gradient(0.3turn, #5C917C, #142E2C);
   /* position: fixed; */
   /* overflow: hidden; */
-  overscroll-behavior-y: none;
+  /* overscroll-behavior-y: none; */
   /* font-family: "Inter var", sans-serif; */
   color: whitesmoke;
   -webkit-font-smoothing: antialiased;
@@ -171,6 +173,7 @@ progress::-moz-progress-bar {
   display: flex;
   justify-content: space-between;
   font-size: 0.8rem;
+  width: 100vw;
 }
 
 .footerOverlay {
@@ -179,9 +182,7 @@ progress::-moz-progress-bar {
   flex-direction: column;
   justify-content: flex-end;
 }
-.footer{
-  width: 100%;
-}
+
 
 .footerLeft{
   display: flex;
